--- a/json_ui_engine/pubspec.yaml
+++ b/json_ui_engine/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_remote_ui
+name: flutter_remote_ui_kit
 description: A production-ready Flutter package that enables a fully JSON-driven, remote-configurable UI system.
 version: 1.0.0
 homepage: https://github.com/example/flutter_remote_ui
