Update repository URLs

--- a/json_ui_engine/pubspec.yaml
+++ b/json_ui_engine/pubspec.yaml
@@ -1,7 +1,9 @@
 name: flutter_remote_ui_kit
 description: A production-ready Flutter package that enables a fully JSON-driven, remote-configurable UI system.
 version: 1.0.1
-homepage: https://github.com/example/flutter_remote_ui
+homepage: https://github.com/ds4914/json_ui_engine
+repository: https://github.com/ds4914/json_ui_engine
+issue_tracker: https://github.com/ds4914/json_ui_engine/issues
 environment:
   sdk: ">=3.0.0 <4.0.0"
 
