--- a/sudoku_generator/pubspec.yaml
+++ b/sudoku_generator/pubspec.yaml
@@ -1,9 +1,9 @@
 name: sudoku_generator
 description: A modern, identifiable Sudoku game widget built with Flutter and Riverpod.
-version: 1.0.4
-homepage: https://github.com/example/sudoku_generator
-repository: https://github.com/example/sudoku_generator
-issue_tracker: https://github.com/example/sudoku_generator/issues
+version: 1.0.5
+homepage: https://github.com/ds4914/sudoku_generator
+repository: https://github.com/ds4914/sudoku_generator
+issue_tracker: https://github.com/ds4914/sudoku_generator/issues
 
 environment:
   sdk: ^3.6.0
@@ -20,7 +20,7 @@ dependencies:
 
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  flutter_riverpod: ">=2.6.1 <4.0.0"
+  flutter_riverpod: ^3.1.0
 
 screenshots:
   - description: 'Light mode game play showing the board and controls'
